Umbraco 14 package reference updates
target net 8.0 only
controller / api updates, comment out obsolete types for now (macro etc)
unbundle slimsy
initial dashboard
bump git actuon build to actions/upload-artifact@v4

--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -89,16 +89,16 @@
   <!-- Nuget Package Dependencies -->
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.31.0" />
-    <PackageReference Include="Argotic.Core" Version="3000.0.3" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />    
-    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="10.6.1" />
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="10.6.1" />
-    <PackageReference Include="Umbraco.Cms.Core" Version="10.6.1" />
-    <PackageReference Include="System.ServiceModel.Syndication" Version="6.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="6.0.14" />
+    <PackageReference Include="Argotic.Core" Version="3000.0.5" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
+    <PackageReference Include="Umbraco.Cms.Api.Management" Version="14.1.2" />
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.1.2" />
+    <PackageReference Include="Umbraco.Cms.Core" Version="14.1.2" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="8.0.4" />
     <PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.1" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
