--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -2,13 +2,15 @@
 
 <Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <StaticWebAssetBasePath>/</StaticWebAssetBasePath>
     <!--<OutputType>Library</OutputType>-->
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
 
   <!-- Nuget Package -->
@@ -81,28 +83,34 @@
   </ItemGroup>
 
 
-  <!-- TODO: Error NETSDK1022	Duplicate 'Content' items were included. The .NET SDK includes 'Content' items from your project directory by default. 
-  You can either remove these items from your project file, or set the 'EnableDefaultContentItems' property to 'false' if you want to explicitly include them in your project file. 
-  For more information, see https://aka.ms/sdkimplicititems.
-  -->
-  <!-- 
   <ItemGroup>
     <Content Include="App_Plugins/**/*.*">
       <Pack>true</Pack>
       <PackagePath>App_Plugins</PackagePath>
     </Content>
   </ItemGroup>
-  -->
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.3.4" />
+    <PackageReference Include="Umbraco.Cms.Web.Common" Version="14.3.4" />
+    <PackageReference Include="Umbraco.Cms.Api.Common" Version="14.3.4" />
+    <PackageReference Include="Umbraco.Cms.Api.Management" Version="14.3.4" />
+  </ItemGroup>
+
+  <!-- Conditionally obtain references for the .NET Framework 4.5 target -->
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="15.4.1" />
+    <PackageReference Include="Umbraco.Cms.Web.Common" Version="15.4.1" />
+    <PackageReference Include="Umbraco.Cms.Api.Common" Version="15.4.1" />
+    <PackageReference Include="Umbraco.Cms.Api.Management" Version="15.4.1" />
+  </ItemGroup>
+
 
   <!-- Nuget Package Dependencies -->
   <ItemGroup>
     <PackageReference Include="Argotic.Core" Version="3001.0.0" />
     <PackageReference Include="Smidge" Version="4.5.1" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.5" />
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="15.4.1" />
-    <PackageReference Include="Umbraco.Cms.Web.Common" Version="15.4.1" />
-    <PackageReference Include="Umbraco.Cms.Api.Common" Version="15.4.1" />
-    <PackageReference Include="Umbraco.Cms.Api.Management" Version="15.4.1" />
     <PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.3" />
   </ItemGroup>
   
@@ -147,9 +155,6 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="Nerdbank.GitVersioning" Version="3.7.115" />
   </ItemGroup>
 
 </Project>
