--- a/src/Articulate/Client/package.json
+++ b/src/Articulate/Client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "articulate",
   "private": true,
-  "version": "0.0.0",
+  "version": "6.0.0",
   "type": "module",
   "scripts": {
     "watch": "tsc && vite build --watch",
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@hey-api/client-fetch": "^0.8.3",
     "@hey-api/openapi-ts": "^0.64.10",
-    "@umbraco-cms/backoffice": "^*",
+    "@umbraco-cms/backoffice": "^15.4.1",
     "chalk": "^5.4.1",
     "cross-env": "^7.0.3",
     "node-fetch": "^3.3.2",
