--- a/src/Articulate.Tests.Website/Articulate.Tests.Website.csproj
+++ b/src/Articulate.Tests.Website/Articulate.Tests.Website.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -10,7 +10,6 @@
     <PackageReference Include="Umbraco.Cms" Version="15.4.1" />
   </ItemGroup>
 
-  <!-- TODO: Review this for netcore / Umbraco 14+ -->
   <Import Project="..\Articulate\build\Articulate.targets" />
   <ItemGroup>
     <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
