--- a/src/Articulate/Client/package.json
+++ b/src/Articulate/Client/package.json
@@ -17,9 +17,7 @@
     "cross-env": "^7.0.3",
     "node-fetch": "^3.3.2",
     "typescript": "^5.8.2",
-    "vite": "^6.2.0"
-  },
-  "dependencies": {
-    "@umbraco-ui/uui-icon-registry-essential": "^1.13.0"
+    "vite": "^6.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
