--- a/.gitignore
+++ b/.gitignore
@@ -485,12 +485,11 @@ umbraco-package-schema.json
 package-lock.json
 
 # Articulate specific files
-src/packages/*
-/src/Articulate.Tests.Website/App_Plugins/Articulate/*
-/src/Articulate/wwwroot/App_Plugins/Articulate/*
-/src/Articulate.Tests.Website/umbraco
-/src/Articulate.Tests.Website/wwwroot/App_Plugins/Articulate
-/src/Articulate.Tests.Website/wwwroot/media
+src/Articulate/wwwroot/App_Plugins/Articulate
+src/Articulate.Tests.Website/App_Plugins/Articulate
+src/Articulate.Tests.Website/umbraco
+src/Articulate.Tests.Website/wwwroot/media
+src/Articulate.Tests.Website/wwwroot/App_Plugins/Articulate
 
 build
 !build/build.ps1
