--- a/src/Articulate/Client/package.json
+++ b/src/Articulate/Client/package.json
@@ -1,26 +1,39 @@
 {
-    "name": "articulate",
-    "private": true,
-    "version": "6.0.0",
-    "type": "module",
-    "scripts": {
-        "watch": "tsc && vite build --watch",
         "build": "tsc && vite build && powershell -Command \"Remove-Item -Recurse -Force 'F:\\int\\Articulate\\src\\Articulate.Tests.Website\\wwwroot\\App_Plugins\\Articulate\\*'; Copy-Item -Path 'F:\\int\\Articulate\\src\\Articulate\\wwwroot\\App_Plugins\\Articulate\\*' -Destination 'F:\\int\\Articulate\\src\\Articulate.Tests.Website\\wwwroot\\App_Plugins\\Articulate\\' -Recurse -Force; Write-Host '✅ Copied build output.'\"",
-        "generate-client": "node scripts/generate-openapi.js https://localhost:44366/umbraco/swagger/articulate/swagger.json",
-        "check": "npx @biomejs/biome check --write ."
-    },
-    "devDependencies": {
-        "@biomejs/biome": "1.9.4",
-        "@biomejs/cli-win32-x64": "^1.9.4",
-        "@hey-api/client-fetch": "^0.8.3",
-        "@hey-api/openapi-ts": "^0.64.10",
-        "@rollup/rollup-win32-x64-msvc": "4.40.2",
-        "@umbraco-cms/backoffice": "^15.4.1",
-        "chalk": "^5.4.1",
-        "cross-env": "^7.0.3",
-        "node-fetch": "^3.3.2",
-        "typescript": "^5.8.2",
-        "vite": "^6.2.0",
-        "vite-tsconfig-paths": "^5.1.4"
-    }
+  "name": "articulate",
+  "private": true,
+  "version": "6.0.0",
+  "type": "module",
+  "scripts": {
+    "watch": "tsc && vite build --watch",
+    "generate-client": "node scripts/generate-openapi.js https://localhost:44366/umbraco/swagger/articulate/swagger.json",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .ts,.js,.tsx,.jsx"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.9",
+    "@eslint/js": "^9.28.0",
+    "@hey-api/client-fetch": "^0.8.3",
+    "@hey-api/openapi-ts": "^0.64.10",
+    "@rollup/rollup-win32-x64-msvc": "4.40.2",
+    "@umbraco-cms/backoffice": "^15.4.1",
+    "chalk": "^5.4.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-lit": "^2.1.1",
+    "eslint-plugin-local-rules": "3.0.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-wc": "3.0.1",
+    "node-fetch": "^3.3.2",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "8.26.0",
+    "vite": "^6.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "dependencies": {
+    "lit": "^2.8.0"
+  }
 }
