--- a/src/Articulate/Client/tsconfig.json
+++ b/src/Articulate/Client/tsconfig.json
@@ -1,27 +1,33 @@
 {
-    "compilerOptions": {
-        "target": "ES2020",
-        "experimentalDecorators": true,
-        "useDefineForClassFields": false,
-        "module": "ESNext",
-        "lib": ["ES2020", "DOM", "DOM.Iterable"],
-        "skipLibCheck": true,
-
-        /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
-        "isolatedModules": true,
-        "moduleDetection": "force",
-        "noEmit": true,
-
-        /* Linting */
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-
-        "erasableSyntaxOnly": true,
-        "types": ["@umbraco-cms/backoffice/extension-types"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@umbraco-cms/backoffice/external/lit": [
+        "node_modules/@umbraco-cms/backoffice/dist-cms/external/lit/index.d.ts"
+      ]
     },
-    "include": ["src"]
+    "target": "ES2020",
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
+    "erasableSyntaxOnly": true,
+    "types": ["@umbraco-cms/backoffice/extension-types", "@umbraco-cms/backoffice/external/lit"]
+  },
+  "include": ["src"]
 }
