--- a/src/Articulate/Client/package.json
+++ b/src/Articulate/Client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "npx chokidar \"src/**/*\" -c \"npm run build\"",
     "build": "tsc && vite build && node scripts/copy-articulate-output.cjs",
-    "generate-client": "node scripts/generate-openapi.js https://localhost:44366/umbraco/swagger/articulate/swagger.json",
+    "generate-client": "node scripts/generate-openapi.js https://localhost:44366/umbraco/swagger/management/swagger.json?urls.primaryName=Umbraco+Management+API",
     "format": "prettier --write .",
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx"
   },
@@ -34,8 +34,5 @@
     "typescript-eslint": "8.26.0",
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "dependencies": {
-    "lit": "^2.8.0"
   }
 }
