--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -90,12 +90,11 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.31.0" />
     <PackageReference Include="Argotic.Core" Version="3000.0.3" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />    
-    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="10.8.6" />
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="10.6.1" />
-    <PackageReference Include="Umbraco.Cms.Core" Version="10.8.6" />
+    <!-- <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />     -->
+    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="13.8.1" />
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="13.8.1" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="6.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="6.0.14" />
+    <!-- <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="6.0.14" /> -->
     <PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.1" />
   </ItemGroup>
   
