add Articulate dashboard UI components and build configuration
remove .net 8 support
amend api's for Guid instead of integer
last commit before PR's against official branch feature/umb15 #455

--- a/.gitignore
+++ b/.gitignore
@@ -486,11 +486,11 @@ umbraco-package-schema.json
 package-lock.json
 
 # Articulate specific files
-src/Articulate/wwwroot/App_Plugins/Articulate
-src/Articulate.Tests.Website/App_Plugins/Articulate
-src/Articulate.Tests.Website/umbraco
-src/Articulate.Tests.Website/wwwroot/media
-src/Articulate.Tests.Website/wwwroot/App_Plugins/Articulate
+/src/Articulate.Tests.Website/umbraco
+/src/Articulate.Tests.Website/App_Plugins/Articulate
+/src/Articulate.Tests.Website/wwwroot/App_Plugins/Articulate
+/src/Articulate.Tests.Website/wwwroot/media
+/src/Articulate/wwwroot/App_Plugins/Articulate
 
 build
 !build/build.ps1
