--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -2,7 +2,7 @@
 
 <Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net9.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
@@ -26,6 +26,7 @@
     <Company>Shannon Deminick</Company>
     <Copyright>Copyright © $(Company) $([System.DateTime]::Now.Year)</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
     
   <!--
@@ -90,24 +91,12 @@
     </Content>
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.3.4" />
-    <PackageReference Include="Umbraco.Cms.Web.Common" Version="14.3.4" />
-    <PackageReference Include="Umbraco.Cms.Api.Common" Version="14.3.4" />
-    <PackageReference Include="Umbraco.Cms.Api.Management" Version="14.3.4" />
-  </ItemGroup>
-
-  <!-- Conditionally obtain references for the .NET Framework 4.5 target -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="15.4.1" />
-    <PackageReference Include="Umbraco.Cms.Web.Common" Version="15.4.1" />
-    <PackageReference Include="Umbraco.Cms.Api.Common" Version="15.4.1" />
-    <PackageReference Include="Umbraco.Cms.Api.Management" Version="15.4.1" />
-  </ItemGroup>
-
-
   <!-- Nuget Package Dependencies -->
   <ItemGroup>
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="15.4.2" />
+    <PackageReference Include="Umbraco.Cms.Web.Common" Version="15.4.2" />
+    <PackageReference Include="Umbraco.Cms.Api.Common" Version="15.4.2" />
+    <PackageReference Include="Umbraco.Cms.Api.Management" Version="15.4.2" />
     <PackageReference Include="Argotic.Core" Version="3001.0.0" />
     <PackageReference Include="Lucene.Net.Replicator" Version="4.8.0-beta00017" />
     <PackageReference Include="Smidge" Version="4.5.1" />
