--- a/src/Articulate/Client/package.json
+++ b/src/Articulate/Client/package.json
@@ -11,15 +11,14 @@
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx"
   },
   "devDependencies": {
-    "chokidar-cli": "^3.0.0",
-    "fs-extra": "^11.2.0",
     "@eslint/compat": "^1.2.9",
     "@eslint/js": "^9.28.0",
-    "@hey-api/client-fetch": "^0.8.3",
-    "@hey-api/openapi-ts": "^0.64.10",
-    "@rollup/rollup-win32-x64-msvc": "4.40.2",
+    "@hey-api/client-fetch": "^0.11.0",
+    "@hey-api/openapi-ts": "^0.69.2",
+    "@rollup/rollup-win32-x64-msvc": "^4.41.1",
     "@umbraco-cms/backoffice": "^15.4.1",
     "chalk": "^5.4.1",
+    "chokidar-cli": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
@@ -27,11 +26,12 @@
     "eslint-plugin-local-rules": "3.0.2",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-wc": "3.0.1",
+    "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
     "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "^5.8.2",
-    "typescript-eslint": "8.26.0",
+    "typescript-eslint": "^8.33.1",
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
