--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -1,5 +1,3 @@
-<!--TODO: Review all of this for netcore / Umbraco 14+ -->
-
 <Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFrameworks>net9.0</TargetFrameworks>
@@ -55,7 +53,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="App_Plugins\Articulate\BackOffice\assets\themes.css" />
     <None Remove="Packaging\package.zip" />
   </ItemGroup>
 
@@ -88,6 +85,13 @@
     <Content Include="App_Plugins/**/*.*">
       <Pack>true</Pack>
       <PackagePath>App_Plugins</PackagePath>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="App_Plugins\Themes\**\*.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Pack>true</Pack>
+      <PackagePath>App_Plugins\Themes\</PackagePath>
     </Content>
   </ItemGroup>
 
@@ -131,7 +135,7 @@
     <Message Importance="high" Text="Executing Client NPM build script..." />
     <Exec Command="npm run build" WorkingDirectory="Client" />
     <ItemGroup>
-      <_ClientAssetsBuildOutput Include="wwwroot\App_Plugins\**" />
+      <_ClientAssetsBuildOutput Include="App_Plugins\BackOffice\**" />
     </ItemGroup>
     <WriteLinesToFile File="$(IntermediateOutputPath)client.complete.txt" Lines="@(_ClientAssetsBuildOutput)" Overwrite="true" />
   </Target>
