--- a/src/Articulate/Client/package.json
+++ b/src/Articulate/Client/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint . --ext .ts,.js,.tsx,.jsx"
   },
   "dependencies": {
-    "@hey-api/client-fetch": "^0.12.0"
+    "@hey-api/client-fetch": "^0.12.0",
+    "monaco-editor": "^0.52.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.9",
