--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -168,9 +168,6 @@
     <WriteLinesToFile File="$(IntermediateOutputPath)client.complete.txt" Lines="@(_ClientAssetsBuildOutput)" Overwrite="true" />
   </Target>
 
-  <ItemGroup>
-    <Content Include="favicon.ico" />
-  </ItemGroup>
 
   <!-- Uses Package Icon on disk in repo -->
   <ItemGroup>
@@ -180,7 +177,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Update="Icon-transparent.png">
+    <None Include="Icon-transparent.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
