--- a/src/Articulate.Tests.Website/Articulate.Tests.Website.csproj
+++ b/src/Articulate.Tests.Website/Articulate.Tests.Website.csproj
@@ -1,49 +1,44 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>disable</ImplicitUsings>
     <IsPackable>false</IsPackable>
+    <Nullable>disable</Nullable>
+    <CompressionEnabled>false</CompressionEnabled> <!-- Disable compression. E.g. for umbraco backoffice files. These files should be precompressed by node and not let dotnet handle it -->
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Umbraco.Cms" Version="15.4.2" />
+    <PackageReference Include="Umbraco.Cms" Version="15.4.3" />
   </ItemGroup>
 
   <Import Project="..\Articulate\build\Articulate.targets" />
   <ItemGroup>
+    <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
+    <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
+    <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="72.1.0.3" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
     <ProjectReference Include="..\Articulate\Articulate.csproj" />
   </ItemGroup>
 
+
+  <PropertyGroup>
+    <!-- Razor files are needed for the backoffice to work correctly -->
+    <CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
+  </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="umbraco\Data\**" />
-    <Compile Remove="umbraco\logs\**" />
-    <Compile Remove="umbraco\MediaCache\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Remove="umbraco\Data\**" />
-    <EmbeddedResource Remove="umbraco\logs\**" />
-    <EmbeddedResource Remove="umbraco\MediaCache\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="umbraco\Data\**" />
-    <None Remove="umbraco\logs\**" />
-    <None Remove="umbraco\MediaCache\**" />
     <None Include="config\**\*.*">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
-    <None Include="umbraco\**\*.*">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Remove="umbraco\Data\**" />
-    <Content Remove="umbraco\logs\**" />
-    <Content Remove="umbraco\MediaCache\**" />
+    <Compile Remove="umbraco\**" />
+    <Content Remove="umbraco\**" />
+    <EmbeddedResource Remove="umbraco\**" />
+    <None Remove="umbraco\**" />
   </ItemGroup>
 
-  <!-- Set this to true if ModelsBuilder mode is not InMemoryAuto-->
   <PropertyGroup>
+    <!-- Remove RazorCompileOnBuild and RazorCompileOnPublish when not using ModelsMode InMemoryAuto -->
     <RazorCompileOnBuild>false</RazorCompileOnBuild>
     <RazorCompileOnPublish>false</RazorCompileOnPublish>
   </PropertyGroup>
